Harden System Security v1.0.33.0
* Removed a policy from the [Optional Overrides category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline), named `Disabled "Configure password backup directory"`.

   * This is to increase compatibility with Windows Servers. This was the policy's description in the wiki document: Microsoft Security Baselines set its value to "Active Directory", but since the Harden System Security app does not apply to computers managed by domain controllers or Entra ID, there is no need for this policy to be active.

   * As part of addressing [this feature request](https://github.com/HotCakeX/Harden-Windows-Security/issues/280), the policy has been removed from the Optional Overrides category.

* Added a [new policy](https://learn.microsoft.com/en-us/previous-versions/windows/it-pro/windows-10/security/threat-protection/security-policy-settings/deny-log-on-through-remote-desktop-services) to the [Optional Overrides category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline): Allow signing in through Remote Desktop Services. This will allow you to use Remote Desktop (RDP) locally to sign into your machine. For Device Usage intents, it only applies to Developer, Gaming and School intents. By default, all accounts can sign into the machine through Remote Desktop Services, but Microsoft Security Baselines set that policy to block for all kinds of accounts.

* Fixed [an issue](https://github.com/HotCakeX/Harden-Windows-Security/issues/970) in the [Optional Windows Features category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Optional-Windows-Features) by adding the `DismService.exe` component of the Harden System Security app to Attack Surface Reduction rules exclusions, only for the duration of the app's runtime, which is automatically removed when you close the app. Please refer to my comment here for further explanation: https://github.

--- a/Harden System Security/Pages/Protects/Microsoft365AppsSecurityBaseline.xaml
+++ b/Harden System Security/Pages/Protects/Microsoft365AppsSecurityBaseline.xaml
@@ -229,6 +229,18 @@
                     <Grid Background="Transparent">
                         <Grid.ContextFlyout>
                             <MenuFlyout>
+
+                                <MenuFlyoutItem x:Uid="DeleteRow" Click="{x:Bind VMs:ViewModelProvider.Microsoft365AppsSecurityBaselineVM.DeleteSelectedPolicies_Click}">
+                                    <MenuFlyoutItem.KeyboardAccelerators>
+                                        <KeyboardAccelerator Key="Delete" Invoked="{x:Bind VMs:ViewModelProvider.Microsoft365AppsSecurityBaselineVM.DeleteSelectedPolicies_Click}"/>
+                                    </MenuFlyoutItem.KeyboardAccelerators>
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon Glyph="&#xE74D;" />
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutSeparator />
+
                                 <MenuFlyoutItem x:Uid="CopyRow"
                                                 Click="{x:Bind VMs:ViewModelProvider.Microsoft365AppsSecurityBaselineVM.CopySelectedVerificationResults_Click}">
                                     <MenuFlyoutItem.KeyboardAccelerators>
