--- a/Harden System Security/Pages/Protects/MicrosoftSecurityBaseline.xaml
+++ b/Harden System Security/Pages/Protects/MicrosoftSecurityBaseline.xaml
@@ -244,6 +244,17 @@
                         <Grid.ContextFlyout>
                             <MenuFlyout>
 
+                                <MenuFlyoutItem x:Uid="DeleteRow" Click="{x:Bind VMs:ViewModelProvider.MicrosoftSecurityBaselineVM.DeleteSelectedPolicies_Click}">
+                                    <MenuFlyoutItem.KeyboardAccelerators>
+                                        <KeyboardAccelerator Key="Delete" Invoked="{x:Bind VMs:ViewModelProvider.MicrosoftSecurityBaselineVM.DeleteSelectedPolicies_Click}"/>
+                                    </MenuFlyoutItem.KeyboardAccelerators>
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon Glyph="&#xE74D;" />
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutSeparator />
+
                                 <MenuFlyoutItem x:Uid="CopyRow"
                                                 Click="{x:Bind VMs:ViewModelProvider.MicrosoftSecurityBaselineVM.CopySelectedVerificationResults_Click}">
                                     <MenuFlyoutItem.KeyboardAccelerators>
