--- a/AppControl Manager/Pages/MergePolicies.xaml
+++ b/AppControl Manager/Pages/MergePolicies.xaml
@@ -55,18 +55,20 @@
 
                     <customUI:SettingsCardV3 x:Uid="BrowseForMainPolicyToMergeSettingsCard">
 
-                        <Button x:Uid="GenericBrowseButton" Click="{x:Bind ViewModel.MainPolicyBrowseButton_Click}">
+                        <customUI:ButtonV2 x:Uid="GenericBrowseButton"
+                                           Click="{x:Bind ViewModel.MainPolicyBrowseButton_Click}"
+                                           ObservedData="{x:Bind ViewModel.MainPolicy, Mode=OneWay}">
 
-                            <Button.ContentTemplate>
+                            <customUI:ButtonV2.ContentTemplate>
                                 <DataTemplate x:DataType="x:String">
                                     <StackPanel Orientation="Horizontal" Spacing="8">
                                         <FontIcon Glyph="&#xEC50;" FontSize="16"/>
                                         <TextBlock Text="{x:Bind}"/>
                                     </StackPanel>
                                 </DataTemplate>
-                            </Button.ContentTemplate>
+                            </customUI:ButtonV2.ContentTemplate>
 
-                            <Button.Flyout>
+                            <customUI:ButtonV2.Flyout>
                                 <Flyout>
 
                                     <controls:WrapPanel Orientation="Vertical" HorizontalSpacing="15" VerticalSpacing="15">
@@ -82,26 +84,28 @@
                                     </controls:WrapPanel>
 
                                 </Flyout>
-                            </Button.Flyout>
+                            </customUI:ButtonV2.Flyout>
 
-                        </Button>
+                        </customUI:ButtonV2>
 
                     </customUI:SettingsCardV3>
 
                     <customUI:SettingsCardV3 x:Uid="BrowseForOtherPoliciesToMergeSettingsCard">
 
-                        <Button x:Uid="GenericBrowseButton" Click="{x:Bind ViewModel.OtherPoliciesBrowseButton_Click}">
+                        <customUI:ButtonV2 x:Uid="GenericBrowseButton"
+                                           Click="{x:Bind ViewModel.OtherPoliciesBrowseButton_Click}"
+                                           ObservedData="{x:Bind ViewModel.OtherPolicies.Count, Mode=OneWay}">
 
-                            <Button.ContentTemplate>
+                            <customUI:ButtonV2.ContentTemplate>
                                 <DataTemplate x:DataType="x:String">
                                     <StackPanel Orientation="Horizontal" Spacing="8">
                                         <FontIcon Glyph="&#xEC50;" FontSize="16"/>
                                         <TextBlock Text="{x:Bind}"/>
                                     </StackPanel>
                                 </DataTemplate>
-                            </Button.ContentTemplate>
+                            </customUI:ButtonV2.ContentTemplate>
 
-                            <Button.Flyout>
+                            <customUI:ButtonV2.Flyout>
                                 <Flyout>
 
                                     <controls:WrapPanel Orientation="Vertical" HorizontalSpacing="15" VerticalSpacing="15">
@@ -115,9 +119,9 @@
                                     </controls:WrapPanel>
 
                                 </Flyout>
-                            </Button.Flyout>
+                            </customUI:ButtonV2.Flyout>
 
-                        </Button>
+                        </customUI:ButtonV2>
 
                     </customUI:SettingsCardV3>
 
