--- a/AppControl Manager/Pages/ValidatePolicy.xaml
+++ b/AppControl Manager/Pages/ValidatePolicy.xaml
@@ -38,26 +38,62 @@
                     <win:RepositionThemeTransition IsStaggeringEnabled="False" />
                 </win:StackPanel.ChildrenTransitions>
 
-                <controls:SettingsCard x:Uid="ValidateAppControlPolicySettingsCard"
-                                       IsClickEnabled="True"
-                                       IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                                       Click="{x:Bind ViewModel.ValidateXML}"
-                                       IsActionIconVisible="False">
+                <customUI:SettingsCardV3 x:Uid="ValidateAppControlPolicySettingsCard"
+                                         IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}">
 
-                    <Button x:Uid="BrowseButton"
-                            IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
-                            Click="{x:Bind ViewModel.ValidateXML}">
-                        <Button.ContentTemplate>
-                            <DataTemplate x:DataType="x:String">
-                                <StackPanel Orientation="Horizontal" Spacing="8">
-                                    <FontIcon Glyph="&#xEC50;" FontSize="16"/>
-                                    <TextBlock Text="{x:Bind}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </Button.ContentTemplate>
-                    </Button>
+                    <Grid ColumnSpacing="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
 
-                </controls:SettingsCard>
+                        <customUI:ButtonV2 x:Uid="BrowseButton"
+                                           Grid.Column="1"
+                                           IsEnabled="{x:Bind ViewModel.ElementsAreEnabled, Mode=OneWay}"
+                                           ObservedData="{x:Bind ViewModel.SelectedPolicyPath, Mode=OneWay}"
+                                           Click="{x:Bind ViewModel.BrowseAndValidate}">
+
+                            <customUI:ButtonV2.ContentTemplate>
+                                <DataTemplate x:DataType="x:String">
+                                    <StackPanel Orientation="Horizontal" Spacing="8">
+                                        <FontIcon Glyph="&#xEC50;" FontSize="16"/>
+                                        <TextBlock Text="{x:Bind}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </customUI:ButtonV2.ContentTemplate>
+
+                            <customUI:ButtonV2.Flyout>
+                                <Flyout>
+                                    <controls:WrapPanel Orientation="Vertical" HorizontalSpacing="15" VerticalSpacing="15">
+                                        <Button x:Uid="ClearButton" Click="{x:Bind ViewModel.ClearSelectedPolicy}" />
+                                        <TextBlock x:Uid="ViewSelectedFilesTextBlock" TextWrapping="WrapWholeWords" />
+                                        <TextBox Text="{x:Bind ViewModel.SelectedPolicyPath, Mode=OneWay}"
+                                                 TextWrapping="Wrap" AcceptsReturn="True" IsSpellCheckEnabled="False"
+                                                 MinWidth="400" IsReadOnly="True" />
+                                    </controls:WrapPanel>
+                                </Flyout>
+                            </customUI:ButtonV2.Flyout>
+
+                        </customUI:ButtonV2>
+
+                        <!-- Refresh Button -->
+                        <Button x:Uid="RefreshButton"
+                                Grid.Column="0"
+                                Click="{x:Bind ViewModel.RefreshValidation}"
+                                IsEnabled="{x:Bind ViewModel.RefreshButtonEnabled, Mode=OneWay}">
+                            <Button.ContentTemplate>
+                                <DataTemplate x:DataType="x:String">
+                                    <StackPanel Orientation="Horizontal" Spacing="8">
+                                        <FontIcon Glyph="&#xE72C;" FontSize="16"/>
+                                        <TextBlock Text="{x:Bind}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </Button.ContentTemplate>
+                        </Button>
+
+                    </Grid>
+
+                </customUI:SettingsCardV3>
 
                 <!-- Schema -->
                 <controls:SettingsCard x:Uid="SchemaValidationSettingsCard">
