Harden-System-Security-v1.0.35.0
* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information about activation method being used, license status, expiration date (if applicable), and more.

* The Firewall rules that you create in the Windows Firewall page are now instantly made effective instead of waiting for Group Policy engine to apply them on the next cycle.

* The DISM component of the Harden System Security app is now saved in a more secure location during runtime. This location is ACL'd by default to only grant Write access to System and TrustedInstaller. Other users (even Administrators) have Read and eXecute rights but not Write. This location is cleared by the system when the app is uninstalled.

--- a/AppControl Manager/Pages/Home.xaml
+++ b/AppControl Manager/Pages/Home.xaml
@@ -248,6 +248,25 @@
                             </Grid>
                         </Border>
 
+                        <!-- ACTIVATION -->
+                        <Button Style="{StaticResource CardButtonStyle}" Click="{x:Bind ViewModel.OnActivationInfoClick}">
+                            <Grid Style="{StaticResource CardContentGridStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <StackPanel Style="{StaticResource CardHeaderStackStyle}">
+                                    <FontIcon Style="{StaticResource CardHeaderIconStyle}"
+                                              Glyph="&#xE8D0;"/>
+                                    <TextBlock Style="{StaticResource CardHeaderTextStyle}"
+                                               Text="Windows Activation"/>
+                                </StackPanel>
+                                <TextBlock Grid.Row="1"
+                                           Style="{StaticResource CardBodyTextStyle}"
+                                           Text="{x:Bind ViewModel.ActivationStatusSummaryText, Mode=OneWay}"/>
+                            </Grid>
+                        </Button>
+
                         <!-- UPTIME -->
                         <Border Style="{StaticResource OverviewCardBorderStyle}">
                             <Grid Style="{StaticResource CardContentGridStyle}">
