AppControl-Manager-v2.0.59.0-And-Harden-System-Security-v1.0.36.0
* AppControl Manager can now merge/validate/convert AppIDTagging policy types. **The creation of AppIDTagging policies will be added in the next update.**

* Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios. Creation will be added in the next update.

* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information that are not normally visible in the operating system interface about activation method being used, license status, expiration date (if applicable), and more.

* Fixed a visual issue in [the Get File Hashes page](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Get-Code-Integrity-Hashes) where the hash tile you click/tap on would open inline instead of as a modal with dim background.

* [The Update page](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Update) now has a new section that allows you to install any MSIX/MSIXBundle package on your system. If the package you're trying to install is signed then it will be directly installed. If it is not signed, its designated certificate common name and hashing algorithm will be detected from its manifest, a unique matching certificate will be generated on your system in order to sign the package and then install it. This significantly simplifies any app package installation by abstracting and automating the entire process.

* The app now asks for confirmation before closing when there are ongoing operations such as file scans, policy creations, log scans and so on, to prevent accidental termination of important long running tasks. You can configure this new feature in the app's settings page. It has 3 modes: Always ask for confirmation, Automatic (which will only ask if there are ongoing operations and is the default value), and Never ask for confirmation.

* Made further improvements to the p

--- a/AppControl Manager/Pages/CreateDenyPolicy.xaml
+++ b/AppControl Manager/Pages/CreateDenyPolicy.xaml
@@ -686,9 +686,7 @@
                         <controls:SettingsCard x:Uid="ViewDetectedFilesDetailsSettingsCard"
                                            HeaderIcon="{ui:FontIcon Glyph=&#xE83B;}"
                                            IsClickEnabled="True" IsActionIconVisible="True"
-                                           Click="{x:Bind ViewModel.FilesAndFoldersViewFileDetailsSettingsCard_Click}">
-
-                        </controls:SettingsCard>
+                                           Click="{x:Bind ViewModel.FilesAndFoldersViewFileDetailsSettingsCard_Click}"/>
 
                     </controls:SettingsExpander.Items>
 
