--- a/Harden System Security/Pages/UpdatePageCustomMSIXPath.xaml
+++ b/Harden System Security/Pages/UpdatePageCustomMSIXPath.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="AppControlManager.Pages.UpdatePageCustomMSIXPath"
+    x:Class="HardenSystemSecurity.Pages.UpdatePageCustomMSIXPath"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="using:CommunityToolkit.WinUI"
